# React-Automation-Studio-Example-Project-1

./: .gitignore  .gitmodules  LICENSE  README.md  _config.yml  builder.sh  docker-compose-EPICS-Factory.yml  docker-compose-dev-sandboxio.yml  docker-compose-dev-styleguide-dev.yml  docker-compose-dev.yml  docker-compose-epics7-mdsplus-archiver.yml  docker-compose-mdsplus-caddy.yml  docker-compose-mdsplus-epics-archiver.yml  docker-compose-mdsplus-tree.yml  docker-compose-mdsplus.yml  docker-compose-no-vnc.yml  docker-compose-prod-with-demoioc.yml  docker-compose-sandboxio.yml  docker-compose-sdp-ioc.yaml  docker-compose-test.yml  docker-compose.yml  example.env  package-lock.json  prod.sh  styleguide.config.js  styleguide.sh  version  workspace.code-workspace
.devcontainer/: devcontainer.json
ReactApp/: index.html  jsconfig.json  package.json  styleguide.config.js  test-runner-jest.config.cjs  vite.config.js
ReactApp/.storybook/: ImportPath.tsx  Wrapper.jsx  main.js  preview.tsx
ReactApp/public/: index.html
ReactApp/src/: App.js  (+7 more)
adminDbInit/: pyproject.toml
alarmHandlerDbInit/: pyproject.toml
docs/: migrate-from-V6-to-V7.md  migrate-from-V7-to-V8.md
hvps_tools/: async-serial-test.py  hvps_async_methods_test.py  pyproject.toml  rs485-classes-test.py  scratch.py  success_test_rs485_15kVPS.py  test_rs485_15kVPS.ipynb
hvps_tools/hvps_tools/: __init__.py  helpers.py
loadSaveDbInit/: README.md  pyproject.toml
mdsplus/: entrypoint.sh  mdsplus-docs.md  run_mdsplus.sh
nginx/: nginx.dev.conf
src/: App.js  Main.js  routes.js
users/: example.pvAccess.json
(+234 files in other folders)
