[tool.poetry]
name = "hvps_tools"
version = "0.1.0"
description = "High Voltage Pwoer Supply Toolbelt for Fuse Energy Technologies"
authors = ["Josh Fiddler <josh@f.energy>"]
license = "Not for Distribution"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
